--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -1,11 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "SalesWebMvcContext": "server=localhost;userid=root;password=Root0147869;database=saleswebmvcappdb"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-6e7b5559-e2c9-457b-970f-0f8782a958df;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
 }
