--- a/SalesWebMvc/SalesWebMvc.csproj
+++ b/SalesWebMvc/SalesWebMvc.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.Mysql" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
